# synthetic-things

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: codeql.yml
bak/: snapcraft.yaml.multi  snapcraft.yaml.ppc64el-s390x
msvc/: packages.config  synthetic-things.sln  synthetic-things.vcxproj  synthetic-things.vcxproj.filters
scripts/: launcher.bat  launcher.sh
snap/: snapcraft.yaml
snap/gui/: synthetic-things.desktop
src/: SyntheticGame.h  SyntheticGameEngine.h  SyntheticGameEngine_Ball.h  SyntheticGameEngine_Core.h  SyntheticGameEngine_Draw.h  SyntheticGameEngine_Effect.h  SyntheticGameEngine_Picture.h  SyntheticGameEngine_Process.h  SyntheticGameEngine_Public.h  SyntheticGameProp.h  SyntheticGameProp_Extensions.h  SyntheticGameProp_Pre.h  SyntheticGameSettings.h  main.cpp
